# mGBA-toPlugin-public

./: .gitignore  .gitmodules  CMakeLists.txt  EmuInstanceInfo.h  GameBoyAudio.cpp  GameBoyAudio.h  GameBoySave.cpp  GameBoySave.h  README.md  mgba_plugin.cpp  mgba_plugin.h
